--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
   ],
   "require": {
     "php": "^8.1 || ^8.2 || ^8.3",
-    "symfony/console": "^6.0"
+    "symfony/console": "^6.0",
+    "laminas/laminas-config-aggregator": "^1.0",
+    "laminas/laminas-servicemanager": "^3.0"
   },
   "autoload": {
     "psr-4": {
