--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "php": "^8.1 || ^8.2 || ^8.3",
     "symfony/console": "^6.0",
     "laminas/laminas-config-aggregator": "^1.0",
-    "laminas/laminas-servicemanager": "^3.0"
+    "laminas/laminas-servicemanager": "^3.0",
+    "webmozart/assert": "^1.0"
   },
   "autoload": {
     "psr-4": {
